# Desafio-Ow7

./: db.sqlite3  manage.py  pyproject.toml
batalha_pokemon/: asgi.py  settings.py  urls.py  wsgi.py
polls/: admin.py  models.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_treinador_user.py  0003_rename_treinador_trainer_rename_nome_trainer_name_and_more.py
polls/templates/polls/: index.html
