[tool.poetry]
name = "batalha-pokemon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "batalha_pokemon"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
